<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editName"
            android:inputType="text"
            android:hint="@string/customer_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editAddress"
            android:inputType="text"
            android:hint="@string/address"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editContact"
            android:inputType="phone"
            android:maxLength="10"
            android:hint="@string/contact_number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editContactOptional"
            android:inputType="phone"
            android:maxLength="10"
            android:hint="@string/contact_optional"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvAddCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_customer"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@color/colorAccent"
        android:textColor="@color/whiteColor"
        android:padding="@dimen/_15sdp"/>

</LinearLayout>
