<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp"
    tools:context="com.go.store.AddItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <EditText
                android:id="@+id/editItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/item_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <EditText
                android:id="@+id/editQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/quantity_in_units"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <EditText
                android:id="@+id/editPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/price"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvAddItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textSize="@dimen/_15ssp"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/colorAccent"
            android:textColor="@color/whiteColor"
            android:padding="@dimen/_10sdp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="false"
        android:background="@color/colorAccent"
        android:textColor="@color/whiteColor"
        android:padding="@dimen/_10sdp"/>

</LinearLayout>
