<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_15sdp"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginRight="@dimen/_15sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvItem"
            android:text="@string/item_name"
            android:textSize="@dimen/_12ssp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvItemQuantity"
            android:text="@string/quantity_in_units"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_12ssp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvItemPrice"
                android:text="@string/price"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="@dimen/_12ssp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgEdit"
                android:layout_gravity="end"
                android:contentDescription="@null"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@android:drawable/ic_menu_edit"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgDelete"
                android:layout_gravity="end"
                android:contentDescription="@null"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@android:drawable/ic_menu_delete"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>